; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dev.c_ecore_llh_shadow_remove_all_filters.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dev.c_ecore_llh_shadow_remove_all_filters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_dev = type { %struct.ecore_llh_info* }
%struct.ecore_llh_info = type { %struct.ecore_llh_filter_info** }
%struct.ecore_llh_filter_info = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"remove_all\00", align 1
@ECORE_SUCCESS = common dso_local global i32 0, align 4
@NIG_REG_LLH_FUNC_FILTER_EN_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ecore_dev*, i64)* @ecore_llh_shadow_remove_all_filters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecore_llh_shadow_remove_all_filters(%struct.ecore_dev* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ecore_dev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.ecore_llh_info*, align 8
  %7 = alloca %struct.ecore_llh_filter_info*, align 8
  %8 = alloca i32, align 4
  store %struct.ecore_dev* %0, %struct.ecore_dev** %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load %struct.ecore_dev*, %struct.ecore_dev** %4, align 8
  %10 = getelementptr inbounds %struct.ecore_dev, %struct.ecore_dev* %9, i32 0, i32 0
  %11 = load %struct.ecore_llh_info*, %struct.ecore_llh_info** %10, align 8
  store %struct.ecore_llh_info* %11, %struct.ecore_llh_info** %6, align 8
  %12 = load %struct.ecore_dev*, %struct.ecore_dev** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @ecore_llh_shadow_sanity(%struct.ecore_dev* %12, i64 %13, i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* @ECORE_SUCCESS, align 4
  %17 = icmp ne i32 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* %8, align 4
  store i32 %19, i32* %3, align 4
  br label %34

20:                                               ; preds = %2
  %21 = load %struct.ecore_llh_info*, %struct.ecore_llh_info** %6, align 8
  %22 = getelementptr inbounds %struct.ecore_llh_info, %struct.ecore_llh_info* %21, i32 0, i32 0
  %23 = load %struct.ecore_llh_filter_info**, %struct.ecore_llh_filter_info*** %22, align 8
  %24 = load i64, i64* %5, align 8
  %25 = getelementptr inbounds %struct.ecore_llh_filter_info*, %struct.ecore_llh_filter_info** %23, i64 %24
  %26 = load %struct.ecore_llh_filter_info*, %struct.ecore_llh_filter_info** %25, align 8
  store %struct.ecore_llh_filter_info* %26, %struct.ecore_llh_filter_info** %7, align 8
  %27 = load %struct.ecore_llh_filter_info*, %struct.ecore_llh_filter_info** %7, align 8
  %28 = load i32, i32* @NIG_REG_LLH_FUNC_FILTER_EN_SIZE, align 4
  %29 = sext i32 %28 to i64
  %30 = mul i64 %29, 4
  %31 = trunc i64 %30 to i32
  %32 = call i32 @OSAL_MEM_ZERO(%struct.ecore_llh_filter_info* %27, i32 %31)
  %33 = load i32, i32* @ECORE_SUCCESS, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %20, %18
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @ecore_llh_shadow_sanity(%struct.ecore_dev*, i64, i32, i8*) #1

declare dso_local i32 @OSAL_MEM_ZERO(%struct.ecore_llh_filter_info*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
